<?xml version="1.0"?>
<package>
  <name>kamu_robotu_launch</name>
  <version>0.3.5</version>
  <description>
    kamu_robotu_launch contains launch files for kamu_robotu
  </description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="oguz.ozdemir@ieee.metu.edu.tr">Oguz Ozdemir</maintainer>
  <maintainer email="sami.akgun@ieee.metu.edu.tr">Sami Alperen Akgun</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>hector_mapping</run_depend>
  <run_depend>hector_map_server</run_depend>
  <run_depend>hector_trajectory_server</run_depend>
  <run_depend>hector_geotiff</run_depend>
  <run_depend>hector_geotiff_plugins</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
