<?xml version="1.0"?>
<package>
  <name>kamu_robotu_odometry_bridge</name>
  <version>0.0.0</version>
  <description>The kamu_robotu_odometry_bridge package</description>

  <maintainer email="oguz.ozdemir@ieee.metu.edu.tr">oguz</maintainer>


   <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>serial</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <run_depend>serial</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>

</package>
